Disable tidy check in CI (requires vcpkg dependency)
Tidy check fails because it can't find the MongoDB C++ driver (bsoncxx)
which is installed via vcpkg. The format check still runs.

--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -27,4 +27,5 @@ jobs:
       duckdb_version: v1.4.1
       ci_tools_version: v1.4.1
       extension_name: mongo
-      format_checks: 'format;tidy'
+      # Tidy check disabled because it requires MongoDB C++ driver (vcpkg dependency).
+      format_checks: 'format'
