--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -14,12 +14,10 @@ concurrency:
 jobs:
   duckdb-stable-build:
     name: Build extension binaries
-    # TODO: Update to use a tagged version (e.g., v1.4.2+) once available that includes the apk update fix
-    # Currently using @main to pick up the fix for invalid --y flag in alpine Dockerfile
-    uses: duckdb/extension-ci-tools/.github/workflows/_extension_distribution.yml@main
+    uses: duckdb/extension-ci-tools/.github/workflows/_extension_distribution.yml@v1.4.3
     with:
-      duckdb_version: v1.4.1
-      ci_tools_version: main
+      duckdb_version: v1.4.3
+      ci_tools_version: v1.4.3
       extension_name: mongo
       exclude_archs: "wasm_mvp;wasm_eh;wasm_threads;windows_amd64_mingw;"
       # Use vcpkg commit with mongo-c-driver 1.30.3 which includes the CMP0042 fix.
@@ -30,12 +28,10 @@ jobs:
 
   code-quality-check:
     name: Code Quality Check
-    # TODO: Update to use a tagged version (e.g., v1.4.2+) once available that includes the apk update fix
-    # Currently using @main to pick up the fix for invalid --y flag in alpine Dockerfile
-    uses: duckdb/extension-ci-tools/.github/workflows/_extension_code_quality.yml@main
+    uses: duckdb/extension-ci-tools/.github/workflows/_extension_code_quality.yml@v1.4.3
     with:
-      duckdb_version: v1.4.1
-      ci_tools_version: main
+      duckdb_version: v1.4.3
+      ci_tools_version: v1.4.3
       extension_name: mongo
       # Tidy check disabled because it requires MongoDB C++ driver (vcpkg dependency).
       format_checks: 'format'
