--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -13,7 +13,7 @@ concurrency:
 
 jobs:
   duckdb-stable-build:
-    name: Build extension binaries
+    name: Build extension binaries (DuckDB v1.4.3 stable)
     uses: duckdb/extension-ci-tools/.github/workflows/_extension_distribution.yml@v1.4.3
     with:
       duckdb_version: v1.4.3
@@ -27,7 +27,7 @@ jobs:
       vcpkg_commit: '9aa0650e5c8d23fe66701bafb3ec03ac732a3ff1'
 
   duckdb-next-build:
-    name: Build extension binaries
+    name: Build extension binaries (DuckDB main - compatibility check)
     uses: duckdb/extension-ci-tools/.github/workflows/_extension_distribution.yml@main
     with:
       duckdb_version: main
