--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -15,7 +15,7 @@ jobs:
   duckdb-stable-build:
     name: Build extension binaries (DuckDB v1.4.4 stable)
     # TODO: Switch back to v1.4.4 tag once available in extension-ci-tools.
-    uses: duckdb/extension-ci-tools/.github/workflows/_extension_distribution.yml@main
+    uses: duckdb/extension-ci-tools/.github/workflows/_extension_distribution.yml@v1.4.3
     with:
       duckdb_version: v1.4.4
       ci_tools_version: v1.4.4
@@ -44,7 +44,7 @@ jobs:
   code-quality-check:
     name: Code Quality Check
     # TODO: Switch back to v1.4.4 tag once available in extension-ci-tools.
-    uses: duckdb/extension-ci-tools/.github/workflows/_extension_code_quality.yml@main
+    uses: duckdb/extension-ci-tools/.github/workflows/_extension_code_quality.yml@v1.4.3
     with:
       duckdb_version: v1.4.4
       ci_tools_version: v1.4.4
